tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__20030313_1.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/20030313-1.c" (c, x86_64-unknown-linux-gnu)
global x : rec_A = {13, 14, 15, 16} [external, default, align 8, dso_local]

fn abort() -> void [external, c, nothrow];
fn foo(%arg0: u64i*, %arg1: s32i) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: u64i*, %arg1: s32i):
        %86 = alloca u64i*, "x", align 8
        %87 = alloca s32i, "y", align 4
        store %arg0, %86
        store %arg1, %87
        scope {
            %178 = load %87 : s32i, align 4
            %179 = const 12 : s32i
            %180 = cmp ne %178, %179 : bool
            if %180 {
                %181 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        scope {
            %163 = const 0 : s64i
            %164 = load %86 : u64i*, align 8
            %165 = ptr_stride %164, %163 : u64i*
            %166 = load %165 : u64i, align 8
            %167 = const 1 : u64i
            %168 = cmp ne %166, %167 : bool
            %169 = ternary %168 ? { : bool
                %177 = const #true : bool
                yield %177
            } : {
                %171 = const 1 : s64i
                %172 = load %86 : u64i*, align 8
                %173 = ptr_stride %172, %171 : u64i*
                %174 = load %173 : u64i, align 8
                %175 = const 11 : u64i
                %176 = cmp ne %174, %175 : bool
                yield %176
            }
            if %169 {
                %170 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        scope {
            %148 = const 2 : s64i
            %149 = load %86 : u64i*, align 8
            %150 = ptr_stride %149, %148 : u64i*
            %151 = load %150 : u64i, align 8
            %152 = const 2 : u64i
            %153 = cmp ne %151, %152 : bool
            %154 = ternary %153 ? { : bool
                %162 = const #true : bool
                yield %162
            } : {
                %156 = const 3 : s64i
                %157 = load %86 : u64i*, align 8
                %158 = ptr_stride %157, %156 : u64i*
                %159 = load %158 : u64i, align 8
                %160 = const 12 : u64i
                %161 = cmp ne %159, %160 : bool
                yield %161
            }
            if %154 {
                %155 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        scope {
            %133 = const 4 : s64i
            %134 = load %86 : u64i*, align 8
            %135 = ptr_stride %134, %133 : u64i*
            %136 = load %135 : u64i, align 8
            %137 = const 3 : u64i
            %138 = cmp ne %136, %137 : bool
            %139 = ternary %138 ? { : bool
                %147 = const #true : bool
                yield %147
            } : {
                %141 = const 5 : s64i
                %142 = load %86 : u64i*, align 8
                %143 = ptr_stride %142, %141 : u64i*
                %144 = load %143 : u64i, align 8
                %145 = const 13 : u64i
                %146 = cmp ne %144, %145 : bool
                yield %146
            }
            if %139 {
                %140 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        scope {
            %118 = const 6 : s64i
            %119 = load %86 : u64i*, align 8
            %120 = ptr_stride %119, %118 : u64i*
            %121 = load %120 : u64i, align 8
            %122 = const 4 : u64i
            %123 = cmp ne %121, %122 : bool
            %124 = ternary %123 ? { : bool
                %132 = const #true : bool
                yield %132
            } : {
                %126 = const 7 : s64i
                %127 = load %86 : u64i*, align 8
                %128 = ptr_stride %127, %126 : u64i*
                %129 = load %128 : u64i, align 8
                %130 = const 14 : u64i
                %131 = cmp ne %129, %130 : bool
                yield %131
            }
            if %124 {
                %125 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        scope {
            %103 = const 8 : s64i
            %104 = load %86 : u64i*, align 8
            %105 = ptr_stride %104, %103 : u64i*
            %106 = load %105 : u64i, align 8
            %107 = const 5 : u64i
            %108 = cmp ne %106, %107 : bool
            %109 = ternary %108 ? { : bool
                %117 = const #true : bool
                yield %117
            } : {
                %111 = const 9 : s64i
                %112 = load %86 : u64i*, align 8
                %113 = ptr_stride %112, %111 : u64i*
                %114 = load %113 : u64i, align 8
                %115 = const 15 : u64i
                %116 = cmp ne %114, %115 : bool
                yield %116
            }
            if %109 {
                %110 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        scope {
            %88 = const 10 : s64i
            %89 = load %86 : u64i*, align 8
            %90 = ptr_stride %89, %88 : u64i*
            %91 = load %90 : u64i, align 8
            %92 = const 6 : u64i
            %93 = cmp ne %91, %92 : bool
            %94 = ternary %93 ? { : bool
                %102 = const #true : bool
                yield %102
            } : {
                %96 = const 11 : s64i
                %97 = load %86 : u64i*, align 8
                %98 = ptr_stride %97, %96 : u64i*
                %99 = load %98 : u64i, align 8
                %100 = const 16 : u64i
                %101 = cmp ne %99, %100 : bool
                yield %101
            }
            if %94 {
                %95 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        return
}
fn bar() -> rec_A* [internal, c, no_inline, dso_local, nothrow] {
    %78 = alloca rec_A*, "__retval", align 8
    %79 = alloca rec_A*, "r", align 8
    scope {
        %82 = const 8 : s32i
        switch %82 {
            case equal 2 {
                %85 = get_global @abort : (() -> void)*
                call @abort() [all]
                break
            }
            case equal 8 {
                %84 = get_global @x : rec_A*
                store %84, %79, align 8
                break
            }
            case default {
                %83 = get_global @abort : (() -> void)*
                call @abort() [all]
                break
            }
        }
        yield
    }
    %80 = load %79 : rec_A*, align 8
    store %80, %78
    %81 = load %78 : rec_A*
    return %81
}
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca u64i[40], "a", align 16
    %2 = alloca s32i, "b", align 4
    %3 = const 0 : s32i
    store %3, %0
    %4 = const 0 : s32i
    store %4, %2, align 4
    %5 = const 1 : u64i
    %6 = load %2 : s32i, align 4
    %7 = inc %6 : s32i [nsw]
    store %7, %2, align 4
    %8 = cast(integral) %6 : s64i
    %9 = get_element %1[%8] : u64i*
    store %5, %9, align 8
    %10 = const 11 : u64i
    %11 = load %2 : s32i, align 4
    %12 = inc %11 : s32i [nsw]
    store %12, %2, align 4
    %13 = cast(integral) %11 : s64i
    %14 = get_element %1[%13] : u64i*
    store %10, %14, align 8
    %15 = const 2 : u64i
    %16 = load %2 : s32i, align 4
    %17 = inc %16 : s32i [nsw]
    store %17, %2, align 4
    %18 = cast(integral) %16 : s64i
    %19 = get_element %1[%18] : u64i*
    store %15, %19, align 8
    %20 = const 12 : u64i
    %21 = load %2 : s32i, align 4
    %22 = inc %21 : s32i [nsw]
    store %22, %2, align 4
    %23 = cast(integral) %21 : s64i
    %24 = get_element %1[%23] : u64i*
    store %20, %24, align 8
    %25 = const 3 : u64i
    %26 = load %2 : s32i, align 4
    %27 = inc %26 : s32i [nsw]
    store %27, %2, align 4
    %28 = cast(integral) %26 : s64i
    %29 = get_element %1[%28] : u64i*
    store %25, %29, align 8
    %30 = call @bar() : rec_A* [all]
    %31 = get_member %30[0] "p" : u64i*
    %32 = load %31 : u64i, align 8
    %33 = load %2 : s32i, align 4
    %34 = inc %33 : s32i [nsw]
    store %34, %2, align 4
    %35 = cast(integral) %33 : s64i
    %36 = get_element %1[%35] : u64i*
    store %32, %36, align 8
    %37 = const 4 : u64i
    %38 = load %2 : s32i, align 4
    %39 = inc %38 : s32i [nsw]
    store %39, %2, align 4
    %40 = cast(integral) %38 : s64i
    %41 = get_element %1[%40] : u64i*
    store %37, %41, align 8
    %42 = call @bar() : rec_A* [all]
    %43 = get_member %42[1] "q" : u64i*
    %44 = load %43 : u64i, align 8
    %45 = load %2 : s32i, align 4
    %46 = inc %45 : s32i [nsw]
    store %46, %2, align 4
    %47 = cast(integral) %45 : s64i
    %48 = get_element %1[%47] : u64i*
    store %44, %48, align 8
    %49 = const 5 : u64i
    %50 = load %2 : s32i, align 4
    %51 = inc %50 : s32i [nsw]
    store %51, %2, align 4
    %52 = cast(integral) %50 : s64i
    %53 = get_element %1[%52] : u64i*
    store %49, %53, align 8
    %54 = call @bar() : rec_A* [all]
    %55 = get_member %54[2] "r" : u64i*
    %56 = load %55 : u64i, align 8
    %57 = load %2 : s32i, align 4
    %58 = inc %57 : s32i [nsw]
    store %58, %2, align 4
    %59 = cast(integral) %57 : s64i
    %60 = get_element %1[%59] : u64i*
    store %56, %60, align 8
    %61 = const 6 : u64i
    %62 = load %2 : s32i, align 4
    %63 = inc %62 : s32i [nsw]
    store %63, %2, align 4
    %64 = cast(integral) %62 : s64i
    %65 = get_element %1[%64] : u64i*
    store %61, %65, align 8
    %66 = call @bar() : rec_A* [all]
    %67 = get_member %66[3] "s" : u64i*
    %68 = load %67 : u64i, align 8
    %69 = load %2 : s32i, align 4
    %70 = inc %69 : s32i [nsw]
    store %70, %2, align 4
    %71 = cast(integral) %69 : s64i
    %72 = get_element %1[%71] : u64i*
    store %68, %72, align 8
    %73 = cast(array_to_ptrdecay) %1 : u64i*
    %74 = load %2 : s32i, align 4
    call @foo(%73, %74) [all]
    %75 = get_global @exit : ((s32i) -> void)*
    %76 = const 0 : s32i
    call @exit(%76) [all]
    %77 = load %0 : s32i
    return %77
}
