tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__20030403_1.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/20030403-1.c" (c, x86_64-unknown-linux-gnu)
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca u64i, "count", align 8
    %2 = const 0 : s32i
    store %2, %0
    %3 = const 8 : u64i
    store %3, %1, align 8
    scope {
        %6 = load %1 : u64i, align 8
        %7 = const 2147483647 : u64i
        %8 = cmp gt %6, %7 : bool
        if %8 {
            %9 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %4 = const 0 : s32i
    store %4, %0
    %5 = load %0 : s32i
    return %5
}
