tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__20030408_1.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/20030408-1.c" (c, x86_64-unknown-linux-gnu)
global __const.test4.X : rec_foo = {0, 66, 0, 68, 0, 70, 0, 72, 0, 74} [cir_private, default, dso_local, constant]
global __const.test3.X : rec_foo = {65, 0, 67, 0, 69, 0, 71, 0, 73, 0} [cir_private, default, dso_local, constant]
global __const.test2.X : s8i[10] = [65, 66, 67, 68, 69] [cir_private, default, dso_local, constant]
global __const.test1.X : s8i[8] = [65, 66, 67, 68, 69, 70, 71, 72] [cir_private, default, dso_local, constant]

fn memcpy(%arg0: void*, %arg1: void*, %arg2: u64i) -> void* [external, c, nothrow];
fn abort() -> void [external, c, nothrow];
fn test1() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %283 = alloca s32i, "__retval", align 4
    %284 = alloca s8i[8], "X", align 1
    %285 = alloca s8i[8], "buffer", align 1
    %286 = get_global @__const.test1.X : s8i[8]*
    copy %284, %286
    %287 = cast(array_to_ptrdecay) %285 : s8i*
    %288 = cast(bitcast) %287 : void*
    %289 = cast(array_to_ptrdecay) %284 : s8i*
    %290 = cast(bitcast) %289 : void*
    %291 = const 8 : u64i
    %292 = call @memcpy(%288, %290, %291) : void* [all]
    scope {
        %295 = const 0 : s64i
        %296 = get_element %285[%295] : s8i*
        %297 = load %296 : s8i, align 1
        %298 = cast(integral) %297 : s32i
        %299 = const 65 : s32i
        %300 = cmp ne %298, %299 : bool
        %301 = ternary %300 ? { : bool
            %357 = const #true : bool
            yield %357
        } : {
            %351 = const 1 : s64i
            %352 = get_element %285[%351] : s8i*
            %353 = load %352 : s8i, align 1
            %354 = cast(integral) %353 : s32i
            %355 = const 66 : s32i
            %356 = cmp ne %354, %355 : bool
            yield %356
        }
        %302 = ternary %301 ? { : bool
            %350 = const #true : bool
            yield %350
        } : {
            %344 = const 2 : s64i
            %345 = get_element %285[%344] : s8i*
            %346 = load %345 : s8i, align 1
            %347 = cast(integral) %346 : s32i
            %348 = const 67 : s32i
            %349 = cmp ne %347, %348 : bool
            yield %349
        }
        %303 = ternary %302 ? { : bool
            %343 = const #true : bool
            yield %343
        } : {
            %337 = const 3 : s64i
            %338 = get_element %285[%337] : s8i*
            %339 = load %338 : s8i, align 1
            %340 = cast(integral) %339 : s32i
            %341 = const 68 : s32i
            %342 = cmp ne %340, %341 : bool
            yield %342
        }
        %304 = ternary %303 ? { : bool
            %336 = const #true : bool
            yield %336
        } : {
            %330 = const 4 : s64i
            %331 = get_element %285[%330] : s8i*
            %332 = load %331 : s8i, align 1
            %333 = cast(integral) %332 : s32i
            %334 = const 69 : s32i
            %335 = cmp ne %333, %334 : bool
            yield %335
        }
        %305 = ternary %304 ? { : bool
            %329 = const #true : bool
            yield %329
        } : {
            %323 = const 5 : s64i
            %324 = get_element %285[%323] : s8i*
            %325 = load %324 : s8i, align 1
            %326 = cast(integral) %325 : s32i
            %327 = const 70 : s32i
            %328 = cmp ne %326, %327 : bool
            yield %328
        }
        %306 = ternary %305 ? { : bool
            %322 = const #true : bool
            yield %322
        } : {
            %316 = const 6 : s64i
            %317 = get_element %285[%316] : s8i*
            %318 = load %317 : s8i, align 1
            %319 = cast(integral) %318 : s32i
            %320 = const 71 : s32i
            %321 = cmp ne %319, %320 : bool
            yield %321
        }
        %307 = ternary %306 ? { : bool
            %315 = const #true : bool
            yield %315
        } : {
            %309 = const 7 : s64i
            %310 = get_element %285[%309] : s8i*
            %311 = load %310 : s8i, align 1
            %312 = cast(integral) %311 : s32i
            %313 = const 72 : s32i
            %314 = cmp ne %312, %313 : bool
            yield %314
        }
        if %307 {
            %308 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %293 = const 0 : s32i
    store %293, %283
    %294 = load %283 : s32i
    return %294
}
fn test2() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %192 = alloca s32i, "__retval", align 4
    %193 = alloca s8i[10], "X", align 1
    %194 = alloca s8i[10], "buffer", align 1
    %195 = get_global @__const.test2.X : s8i[10]*
    copy %193, %195
    %196 = cast(array_to_ptrdecay) %194 : s8i*
    %197 = cast(bitcast) %196 : void*
    %198 = cast(array_to_ptrdecay) %193 : s8i*
    %199 = cast(bitcast) %198 : void*
    %200 = const 10 : u64i
    %201 = call @memcpy(%197, %199, %200) : void* [all]
    scope {
        %204 = const 0 : s64i
        %205 = get_element %194[%204] : s8i*
        %206 = load %205 : s8i, align 1
        %207 = cast(integral) %206 : s32i
        %208 = const 65 : s32i
        %209 = cmp ne %207, %208 : bool
        %210 = ternary %209 ? { : bool
            %282 = const #true : bool
            yield %282
        } : {
            %276 = const 1 : s64i
            %277 = get_element %194[%276] : s8i*
            %278 = load %277 : s8i, align 1
            %279 = cast(integral) %278 : s32i
            %280 = const 66 : s32i
            %281 = cmp ne %279, %280 : bool
            yield %281
        }
        %211 = ternary %210 ? { : bool
            %275 = const #true : bool
            yield %275
        } : {
            %269 = const 2 : s64i
            %270 = get_element %194[%269] : s8i*
            %271 = load %270 : s8i, align 1
            %272 = cast(integral) %271 : s32i
            %273 = const 67 : s32i
            %274 = cmp ne %272, %273 : bool
            yield %274
        }
        %212 = ternary %211 ? { : bool
            %268 = const #true : bool
            yield %268
        } : {
            %262 = const 3 : s64i
            %263 = get_element %194[%262] : s8i*
            %264 = load %263 : s8i, align 1
            %265 = cast(integral) %264 : s32i
            %266 = const 68 : s32i
            %267 = cmp ne %265, %266 : bool
            yield %267
        }
        %213 = ternary %212 ? { : bool
            %261 = const #true : bool
            yield %261
        } : {
            %255 = const 4 : s64i
            %256 = get_element %194[%255] : s8i*
            %257 = load %256 : s8i, align 1
            %258 = cast(integral) %257 : s32i
            %259 = const 69 : s32i
            %260 = cmp ne %258, %259 : bool
            yield %260
        }
        %214 = ternary %213 ? { : bool
            %254 = const #true : bool
            yield %254
        } : {
            %248 = const 5 : s64i
            %249 = get_element %194[%248] : s8i*
            %250 = load %249 : s8i, align 1
            %251 = cast(integral) %250 : s32i
            %252 = const 0 : s32i
            %253 = cmp ne %251, %252 : bool
            yield %253
        }
        %215 = ternary %214 ? { : bool
            %247 = const #true : bool
            yield %247
        } : {
            %241 = const 6 : s64i
            %242 = get_element %194[%241] : s8i*
            %243 = load %242 : s8i, align 1
            %244 = cast(integral) %243 : s32i
            %245 = const 0 : s32i
            %246 = cmp ne %244, %245 : bool
            yield %246
        }
        %216 = ternary %215 ? { : bool
            %240 = const #true : bool
            yield %240
        } : {
            %234 = const 7 : s64i
            %235 = get_element %194[%234] : s8i*
            %236 = load %235 : s8i, align 1
            %237 = cast(integral) %236 : s32i
            %238 = const 0 : s32i
            %239 = cmp ne %237, %238 : bool
            yield %239
        }
        %217 = ternary %216 ? { : bool
            %233 = const #true : bool
            yield %233
        } : {
            %227 = const 8 : s64i
            %228 = get_element %194[%227] : s8i*
            %229 = load %228 : s8i, align 1
            %230 = cast(integral) %229 : s32i
            %231 = const 0 : s32i
            %232 = cmp ne %230, %231 : bool
            yield %232
        }
        %218 = ternary %217 ? { : bool
            %226 = const #true : bool
            yield %226
        } : {
            %220 = const 9 : s64i
            %221 = get_element %194[%220] : s8i*
            %222 = load %221 : s8i, align 1
            %223 = cast(integral) %222 : s32i
            %224 = const 0 : s32i
            %225 = cmp ne %223, %224 : bool
            yield %225
        }
        if %218 {
            %219 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %202 = const 0 : s32i
    store %202, %192
    %203 = load %192 : s32i
    return %203
}
fn test3() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %102 = alloca s32i, "__retval", align 4
    %103 = alloca rec_foo, "X", align 1
    %104 = alloca s8i[10], "buffer", align 1
    %105 = get_global @__const.test3.X : rec_foo*
    copy %103, %105
    %106 = cast(array_to_ptrdecay) %104 : s8i*
    %107 = cast(bitcast) %106 : void*
    %108 = cast(bitcast) %103 : void*
    %109 = const 10 : u64i
    %110 = call @memcpy(%107, %108, %109) : void* [all]
    scope {
        %113 = const 0 : s64i
        %114 = get_element %104[%113] : s8i*
        %115 = load %114 : s8i, align 1
        %116 = cast(integral) %115 : s32i
        %117 = const 65 : s32i
        %118 = cmp ne %116, %117 : bool
        %119 = ternary %118 ? { : bool
            %191 = const #true : bool
            yield %191
        } : {
            %185 = const 1 : s64i
            %186 = get_element %104[%185] : s8i*
            %187 = load %186 : s8i, align 1
            %188 = cast(integral) %187 : s32i
            %189 = const 0 : s32i
            %190 = cmp ne %188, %189 : bool
            yield %190
        }
        %120 = ternary %119 ? { : bool
            %184 = const #true : bool
            yield %184
        } : {
            %178 = const 2 : s64i
            %179 = get_element %104[%178] : s8i*
            %180 = load %179 : s8i, align 1
            %181 = cast(integral) %180 : s32i
            %182 = const 67 : s32i
            %183 = cmp ne %181, %182 : bool
            yield %183
        }
        %121 = ternary %120 ? { : bool
            %177 = const #true : bool
            yield %177
        } : {
            %171 = const 3 : s64i
            %172 = get_element %104[%171] : s8i*
            %173 = load %172 : s8i, align 1
            %174 = cast(integral) %173 : s32i
            %175 = const 0 : s32i
            %176 = cmp ne %174, %175 : bool
            yield %176
        }
        %122 = ternary %121 ? { : bool
            %170 = const #true : bool
            yield %170
        } : {
            %164 = const 4 : s64i
            %165 = get_element %104[%164] : s8i*
            %166 = load %165 : s8i, align 1
            %167 = cast(integral) %166 : s32i
            %168 = const 69 : s32i
            %169 = cmp ne %167, %168 : bool
            yield %169
        }
        %123 = ternary %122 ? { : bool
            %163 = const #true : bool
            yield %163
        } : {
            %157 = const 5 : s64i
            %158 = get_element %104[%157] : s8i*
            %159 = load %158 : s8i, align 1
            %160 = cast(integral) %159 : s32i
            %161 = const 0 : s32i
            %162 = cmp ne %160, %161 : bool
            yield %162
        }
        %124 = ternary %123 ? { : bool
            %156 = const #true : bool
            yield %156
        } : {
            %150 = const 6 : s64i
            %151 = get_element %104[%150] : s8i*
            %152 = load %151 : s8i, align 1
            %153 = cast(integral) %152 : s32i
            %154 = const 71 : s32i
            %155 = cmp ne %153, %154 : bool
            yield %155
        }
        %125 = ternary %124 ? { : bool
            %149 = const #true : bool
            yield %149
        } : {
            %143 = const 7 : s64i
            %144 = get_element %104[%143] : s8i*
            %145 = load %144 : s8i, align 1
            %146 = cast(integral) %145 : s32i
            %147 = const 0 : s32i
            %148 = cmp ne %146, %147 : bool
            yield %148
        }
        %126 = ternary %125 ? { : bool
            %142 = const #true : bool
            yield %142
        } : {
            %136 = const 8 : s64i
            %137 = get_element %104[%136] : s8i*
            %138 = load %137 : s8i, align 1
            %139 = cast(integral) %138 : s32i
            %140 = const 73 : s32i
            %141 = cmp ne %139, %140 : bool
            yield %141
        }
        %127 = ternary %126 ? { : bool
            %135 = const #true : bool
            yield %135
        } : {
            %129 = const 9 : s64i
            %130 = get_element %104[%129] : s8i*
            %131 = load %130 : s8i, align 1
            %132 = cast(integral) %131 : s32i
            %133 = const 0 : s32i
            %134 = cmp ne %132, %133 : bool
            yield %134
        }
        if %127 {
            %128 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %111 = const 0 : s32i
    store %111, %102
    %112 = load %102 : s32i
    return %112
}
fn test4() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %12 = alloca s32i, "__retval", align 4
    %13 = alloca rec_foo, "X", align 1
    %14 = alloca s8i[10], "buffer", align 1
    %15 = get_global @__const.test4.X : rec_foo*
    copy %13, %15
    %16 = cast(array_to_ptrdecay) %14 : s8i*
    %17 = cast(bitcast) %16 : void*
    %18 = cast(bitcast) %13 : void*
    %19 = const 10 : u64i
    %20 = call @memcpy(%17, %18, %19) : void* [all]
    scope {
        %23 = const 0 : s64i
        %24 = get_element %14[%23] : s8i*
        %25 = load %24 : s8i, align 1
        %26 = cast(integral) %25 : s32i
        %27 = const 0 : s32i
        %28 = cmp ne %26, %27 : bool
        %29 = ternary %28 ? { : bool
            %101 = const #true : bool
            yield %101
        } : {
            %95 = const 1 : s64i
            %96 = get_element %14[%95] : s8i*
            %97 = load %96 : s8i, align 1
            %98 = cast(integral) %97 : s32i
            %99 = const 66 : s32i
            %100 = cmp ne %98, %99 : bool
            yield %100
        }
        %30 = ternary %29 ? { : bool
            %94 = const #true : bool
            yield %94
        } : {
            %88 = const 2 : s64i
            %89 = get_element %14[%88] : s8i*
            %90 = load %89 : s8i, align 1
            %91 = cast(integral) %90 : s32i
            %92 = const 0 : s32i
            %93 = cmp ne %91, %92 : bool
            yield %93
        }
        %31 = ternary %30 ? { : bool
            %87 = const #true : bool
            yield %87
        } : {
            %81 = const 3 : s64i
            %82 = get_element %14[%81] : s8i*
            %83 = load %82 : s8i, align 1
            %84 = cast(integral) %83 : s32i
            %85 = const 68 : s32i
            %86 = cmp ne %84, %85 : bool
            yield %86
        }
        %32 = ternary %31 ? { : bool
            %80 = const #true : bool
            yield %80
        } : {
            %74 = const 4 : s64i
            %75 = get_element %14[%74] : s8i*
            %76 = load %75 : s8i, align 1
            %77 = cast(integral) %76 : s32i
            %78 = const 0 : s32i
            %79 = cmp ne %77, %78 : bool
            yield %79
        }
        %33 = ternary %32 ? { : bool
            %73 = const #true : bool
            yield %73
        } : {
            %67 = const 5 : s64i
            %68 = get_element %14[%67] : s8i*
            %69 = load %68 : s8i, align 1
            %70 = cast(integral) %69 : s32i
            %71 = const 70 : s32i
            %72 = cmp ne %70, %71 : bool
            yield %72
        }
        %34 = ternary %33 ? { : bool
            %66 = const #true : bool
            yield %66
        } : {
            %60 = const 6 : s64i
            %61 = get_element %14[%60] : s8i*
            %62 = load %61 : s8i, align 1
            %63 = cast(integral) %62 : s32i
            %64 = const 0 : s32i
            %65 = cmp ne %63, %64 : bool
            yield %65
        }
        %35 = ternary %34 ? { : bool
            %59 = const #true : bool
            yield %59
        } : {
            %53 = const 7 : s64i
            %54 = get_element %14[%53] : s8i*
            %55 = load %54 : s8i, align 1
            %56 = cast(integral) %55 : s32i
            %57 = const 72 : s32i
            %58 = cmp ne %56, %57 : bool
            yield %58
        }
        %36 = ternary %35 ? { : bool
            %52 = const #true : bool
            yield %52
        } : {
            %46 = const 8 : s64i
            %47 = get_element %14[%46] : s8i*
            %48 = load %47 : s8i, align 1
            %49 = cast(integral) %48 : s32i
            %50 = const 0 : s32i
            %51 = cmp ne %49, %50 : bool
            yield %51
        }
        %37 = ternary %36 ? { : bool
            %45 = const #true : bool
            yield %45
        } : {
            %39 = const 9 : s64i
            %40 = get_element %14[%39] : s8i*
            %41 = load %40 : s8i, align 1
            %42 = cast(integral) %41 : s32i
            %43 = const 74 : s32i
            %44 = cmp ne %42, %43 : bool
            yield %44
        }
        if %37 {
            %38 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %21 = const 0 : s32i
    store %21, %12
    %22 = load %12 : s32i
    return %22
}
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    %2 = get_global @test1 : (() -> s32i)*
    %3 = call @test1() : s32i [all]
    %4 = get_global @test2 : (() -> s32i)*
    %5 = call @test2() : s32i [all]
    %6 = get_global @test3 : (() -> s32i)*
    %7 = call @test3() : s32i [all]
    %8 = get_global @test4 : (() -> s32i)*
    %9 = call @test4() : s32i [all]
    %10 = const 0 : s32i
    store %10, %0
    %11 = load %0 : s32i
    return %11
}
